Add about text and index text

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,6 +12,7 @@
     <div class="main-content">
         {{>header}}
         <img class="portrait" src="/img/img.png">
+        <p id="aboutText">This site created by Giorgos Petrou.<br>It uses data from mapbox.com and darksky.net</p>
     </div>
 
     {{>footer}}
