--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -13,7 +13,7 @@
     <div class="main-content">
         {{>header}}
 
-        <p>Use this site to get your weather forecast!</p>
+        <p>Type your city or region to get your weather forecast!</p>
 
         <form>
           <input placeholder="Location">
